<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Pere Castillo on 07/05/2017-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/studentDetailsLandscape"
    tools:context="cat.tecnocampus.mobileapps.practica1.carlosbes_perecastillo.activities.StudentDetails">


    <TextView
            android:id="@+id/nameTag2Landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:text="@string/name_tag"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/studentSurnameLandscape"
        android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/studentNamelandscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_marginStart="49dp"
            android:layout_alignBaseline="@+id/nameTag2Landscape"
            android:layout_alignBottom="@+id/nameTag2Landscape"
            android:layout_toEndOf="@+id/surnameTag2Landscape" />




        <TextView
            android:id="@+id/surnameTag2Landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_tag"
            android:layout_alignBaseline="@+id/studentSurnameLandscape"
            android:layout_alignBottom="@+id/studentSurnameLandscape"
            android:layout_alignStart="@+id/nameTag2Landscape" />

        <TextView
            android:id="@+id/studentSurnameLandscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_above="@+id/studentPhoneLandscape"
            android:layout_alignStart="@+id/studentNamelandscape"
            android:layout_marginBottom="26dp" />



        <TextView
            android:id="@+id/phoneTag2Landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_tag"
            android:layout_alignBaseline="@+id/studentPhoneLandscape"
            android:layout_alignBottom="@+id/studentPhoneLandscape"
            android:layout_alignStart="@+id/surnameTag2Landscape" />

        <TextView
            android:id="@+id/studentPhoneLandscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_marginBottom="143dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/studentSurnameLandscape" />




        <TextView
            android:id="@+id/dniTag2Landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni_tag"
            android:layout_marginStart="78dp"
            android:layout_alignBaseline="@+id/studentDniLandscape"
            android:layout_alignBottom="@+id/studentDniLandscape"
            android:layout_toEndOf="@+id/studentSurnameLandscape" />

        <TextView
            android:id="@+id/studentDniLandscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_marginStart="41dp"
            android:layout_alignBaseline="@+id/studentNamelandscape"
            android:layout_alignBottom="@+id/studentNamelandscape"
            android:layout_toEndOf="@+id/dniTag2Landscape" />




        <TextView
            android:id="@+id/gradeTag2Landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade_tag"
            android:layout_alignBaseline="@+id/studentGradeLandscape"
            android:layout_alignBottom="@+id/studentGradeLandscape"
            android:layout_alignStart="@+id/dniTag2Landscape" />

        <TextView
            android:id="@+id/studentGradeLandscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_alignBaseline="@+id/studentSurnameLandscape"
            android:layout_alignBottom="@+id/studentSurnameLandscape"
            android:layout_alignStart="@+id/studentDniLandscape" />


        <TextView
            android:id="@+id/courseTag2Landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_tag"
            android:layout_alignBaseline="@+id/studentCourseLandscape"
            android:layout_alignBottom="@+id/studentCourseLandscape"
            android:layout_alignStart="@+id/gradeTag2Landscape" />

        <TextView
            android:id="@+id/studentCourseLandscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_alignBaseline="@+id/studentPhoneLandscape"
            android:layout_alignBottom="@+id/studentPhoneLandscape"
            android:layout_alignStart="@+id/studentGradeLandscape" />




</RelativeLayout>
