<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Pere Castillo on 07/05/2017-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/studentDetails"
    tools:context="cat.tecnocampus.mobileapps.practica1.carlosbes_perecastillo.activities.StudentDetails">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/nameTag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:text="@string/name_tag" />

            <TextView
                android:id="@+id/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:id="@+id/linearLayout3">

            <TextView
                android:id="@+id/surnameTag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.92"
                android:text="@string/surname_tag" />

            <TextView
                android:id="@+id/studentSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.02"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/linearLayout3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:id="@+id/linearLayout2">

            <TextView
                android:id="@+id/phoneTag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.03"
                android:text="@string/phone_tag" />

            <TextView
                android:id="@+id/studentPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout4"
            android:layout_alignTop="@+id/linearLayout2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp">

            <TextView
                android:id="@+id/dniTag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.15"
                android:text="@string/dni_tag" />

            <TextView
                android:id="@+id/studentDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.99"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/linearLayout4"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:id="@+id/linearLayout5">


            <TextView
                android:id="@+id/gradeTag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.01"
                android:text="@string/grade_tag" />

            <TextView
                android:id="@+id/studentGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/linearLayout5"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp">

            <TextView
                android:id="@+id/courseTag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/course_tag" />

            <TextView
                android:id="@+id/studentCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.01"
                android:text="@string/placeholder" />

        </LinearLayout>


</RelativeLayout>
